--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ permalink: /
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -235,7 +235,7 @@ permalink: /
                 <div class="slideshow-container">
                     <!-- Full-width slides/quotes -->
                     <div class="mySlides fade">
-                    <q>Sybil has been a lifesaver! I had an image in my head what I wanted our new webpage to look like (but no skill or idea how to get there!) and for Sybil no question was silly, no suggestion was left out without serious consideration and the final product is sleek, clean and professionally looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. Her approach is truly personable, she managed our expectations beautifully and delivered a service which is best characterized by 'above and beyond'. As University of Kent Alumna, Sybil simply delivered, she certainly commits her knowledge, skill and innovative entrepreneurial mind to 100% benefit for her customer.</q>
+                    <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
                     <div class="center">
                         <img src="images/logos/nerowireart.png" alt="Nerowireart">
                     </div>
@@ -243,7 +243,7 @@ permalink: /
                     <p class="center">Founder,<br>Nerowireart</p>
                 </div>
                     <div class="mySlides fade">
-                    <q>The first time I spoke to Sybil about designing my website, she really listened and took everything I wanted into the first draft of the layout. It was unbelievably accurate and she incorporated (and enhanced) even the smallest details that I had mentioned. She is totally client focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received from Sybil and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
+                    <q>Sybil is totally client-focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
                     <div class="center">
                         <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter">
                     </div>
@@ -251,13 +251,7 @@ permalink: /
                     <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
                 </div>
                     <div class="mySlides fade">
-                    <q>It was a pleasure to work with Sybil to create my Shopify website. 
-                        She has excellent technical skills and is very client-oriented: she 
-                        always asked for my feedback and communicated so I had regular updates
-                        on what was achieved and estimated timelines to manage my 
-                        expectations. She is always looking to learn and improve and is a
-                        hard worker.<br><br>I would recommend her to anyone looking for a partner 
-                        to nail your website!</q>
+                    <q>It was a pleasure to work with Sybil to create my Shopify website. She has excellent technical skills and she is very client-oriented: she always communicated so I had regular updates on what was achieved and estimated timelines to manage my expectations. She is always looking to improve and is a very hard worker. I would recommend her to anyone looking for a partner to nail their website!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK">
                         </div>
@@ -266,14 +260,7 @@ permalink: /
                                 KYOSK</p>
                     </div>
                     <div class="mySlides fade">
-                    <q>Sybil is an diligent and dedicated professional, who is
-                        not only highly knowledgeable, but is also a delight to work with!
-                        She provided my organisation with a website audit and I was simply
-                        thrilled with the results! The audit was very clearly (and logically) laid 
-                        out so I knew exactly what to do to rectify 
-                        issues, especially thanks to her plain English non-technical 
-                        explanations.<br><br>I would highly recommend Sybil's 
-                        services to anyone!</q>
+                    <q>Sybil is a diligent professional, who is not only highly knowledgeable, but is also a delight to work with! She provided my organisation with a website audit and I was thrilled with the results! The audit was very clearly laid out so I knew exactly what to do to rectify issues, thanks to her plain English non-technical explanations. I would highly recommend Sybil's services to anyone!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning">
                         </div>
@@ -282,13 +269,7 @@ permalink: /
                             Focus on Learning</p>
                         </div>
                     <div class="mySlides fade">
-                    <q>I have been working with Sybil on a range of digital 
-                        service projects. I would recommend her, she is highly 
-                        skilled and communicates digital service issues in a way that is 
-                        jargon-free and understandable.<br><br>She has delivered all the work she 
-                        has taken on for us within the agreed timescale and within budget. 
-                        Her work is of a high quality and she is able to work both as part 
-                        of a team and on her own initiative.</q>
+                    <q>I have been working with Sybil for some time now on a range of digital service projects. I would recommend her, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon-free and understandable. She has delivered all the work she has taken on for us within the agreed timescale and within budget. Her work is of a high quality.</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK">
                         </div>
@@ -297,12 +278,7 @@ permalink: /
                             Future Communities UK</p>
                         </div>
                     <div class="mySlides fade">
-                    <q>Sybil is extremely thorough and pays great attention to details she 
-                        will adapt to your specific needs.<br><br>She has helped me choose a 
-                        platform for my domain name and website and is now helping me build 
-                        the actual website for my business.<br><br>I will definitely recommend 
-                        Sybil to anyone wanting a high quality, personalised and reasonably 
-                        priced service. Her work is top class!</q>
+                    <q>Sybil is extremely thorough and professional, she pays great attention to details and she will adapt to your specific needs. She has helped me choose a platform for my domain name and website and is now helping me build the actual website for my business. I will definitely recommend Sybil to anyone wanting a high quality, personalised and reasonably priced service. Her work is top class!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching">
                         </div>
@@ -379,7 +355,7 @@ permalink: /
                         <a href="https://wordpress.org" target="_blank" rel="noopener noreferrer"><img src="images/logos/WordPress-logotype-alternative.png" alt="WordPress"></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer"><img src="images/logos/CNT_Associates-Empowering-Your-Vision.png" alt="CNT Associates"></a>
+                        <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer"><img src="images/logos/CNT-Associates.png" alt="CNT Associates"></a>
                     </div>
                 </div>
             </div>
@@ -488,7 +464,7 @@ permalink: /
             }
             slides[slideIndex-1].style.display = "block";  
             dots[slideIndex-1].className += " active";
-            t = setTimeout(nextSlide, 4000); // Change slide every 4 seconds
+            t = setTimeout(nextSlide, 20000); // Change slide every 20 seconds
             }
         </script>
     <!-- Start of HubSpot Embed Code -->
