--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@ permalink: /services/
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/services/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -86,12 +86,13 @@ permalink: /services/
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2 class="center">How Can I Help You?</h2>
-                <hr>
-                <p class="container-700 padding-top padding-bottom center">Please read on to find out about the 
+                <h2>How Can I Help You?</h2>
+                <hr class="left-align">
+                <p class="container-1140 padding-top padding-bottom">Please read on to find out about the 
                     services I offer and how they can boost your business.</p>
 
                 <h3>Free Website Review</h3>
+                <hr class="left-align">
                 <h4>Start With an Audit of Your Site</h4>
                 <p>If you know your website needs improvements but you don't know where to begin, start with a free website review. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
                 <ul>
@@ -109,8 +110,8 @@ permalink: /services/
                 <div class="center"><a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" style="width: 100%; max-width: 560px;"></a></div>
 
                 <h3>Website Design</h3>
+                <hr class="left-align">
                 <h4>A Fully-Customised Design for Your Website</h4>
-
                 <p>Your requirements will be gathered and we will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. </p>
 
                 <p>I will present the website designs to you either via a <a href="https://figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link, or I will send you the JPEG images attached to an email.</p> 
@@ -118,8 +119,8 @@ permalink: /services/
                 <p>Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (<a href="https://wix.com/" target="_blank" rel="noopener noreferrer">Wix</a>, <a href="https://wordpress.org/" target="_blank" rel="noopener noreferrer">WordPress</a> or <a href="https://shopify.co.uk/" target="_blank" rel="noopener noreferrer">Shopify</a>).</p>
 
                 <h3>Website Development</h3>
+                <hr class="left-align">
                 <p>Whether you are taking your business online for the first time, or you require work carried out on your existing website, I can help you achieve your goals.</p>
-
                 <h4>Full Website</h4>
                 <p>Your requirements will be gathered and we will work together to develop your new website. It will be set up on the most appropriate platform (<a href="https://www.wix.com/" 
                     target="_blank" rel="noopener noreferrer">Wix</a>, <a href="https://wordpress.org/" target="_blank" 
@@ -143,6 +144,7 @@ permalink: /services/
                 </ul>
                 
                 <h3>Website Maintenance</h3>
+                <hr class="left-align">
                 <p>If you need help running your website, a regular service can be provided for a low monthly cost. This service includes but is not limited to:</p>
                 <ul>
                     <li>Adding/publishing pages and blog posts</li>
@@ -152,8 +154,8 @@ permalink: /services/
                 </ul>
 
                 <h3>Training</h3>
+                <hr class="left-align">
                 <p>I am available to facilitate your workshop or webinar. Here are some examples of events I've run previously.</p>
-
                 <h4>Workshops</h4>
                 <p>In March 2022, as part of Start-Up Bromley Business Week, I presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. Please see the details of the workshop <a href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">here</a>.</p>
 
