--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -45,7 +45,7 @@ permalink: /6-reasons-to-use-shopify/
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/6-reasons-to-use-shopify/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
