--- a/clients.html
+++ b/clients.html
@@ -34,7 +34,7 @@ permalink: /clients/
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/clients/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -334,10 +334,6 @@ permalink: /clients/
                                 <li>Google Analytics setup</li>
                                 <li>Google Search Console submission</li>
                             </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -345,7 +341,7 @@ permalink: /clients/
                 <div id="x-blu" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/x-blu.JPG" alt="x-blu">
+                            <img src="images/clients/x-blu.JPG" alt="x-blu">
                         </div>
                         <div class="col-7">
                             <h2>x-blu</h2>
