--- a/faqs.html
+++ b/faqs.html
@@ -132,7 +132,7 @@ permalink: /faqs/
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/faqs/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
