Fix broken image on Clients page

--- a/clients.html
+++ b/clients.html
@@ -341,7 +341,7 @@ permalink: /clients/
                 <div id="x-blu" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/x-blu.JPG" alt="x-blu">
+                            <img src="/images/clients/x-blu.JPG" alt="x-blu">
                         </div>
                         <div class="col-7">
                             <h2>x-blu</h2>
