Design and copy changes

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ permalink: /
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fas fa-clipboard-check"></i>
-                        <h3>Free Website Review</h3>
+                        <h3>Website Review</h3>
                         <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
                         </div>
                     </div>
@@ -111,7 +111,7 @@ permalink: /
                         <div class="offer-card center">
                             <i class="fas fa-code"></i>
                     <h3>Website Development</h3>
-                    <p>Bespoke website development services tailored to your needs, ranging from one-off tasks, to a full website refresh. Perfect for when you need support on an ad-hoc basis.</p>
+                    <p>Bespoke website development services tailored to your needs, including one-off tasks, design improvements and error fixing. Perfect for when you need support on an ad-hoc basis.</p>
                     </div>
                     </div>
                 </div>
