Properly size images

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ permalink: /
                 <div class="row">
                     <div class="col-4">
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="https://sybiltec.com/images/person-holding-black-iphone-5.jpg" 
+                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-350x183.jpg" 
                                 alt="Person holding black iPhone 5"></a>     
                             <div class="blog-card-text">           
                                 <h3>Cyber Security Best Practices for You and Your Business</h3>
@@ -198,7 +198,7 @@ permalink: /
                     </div>
                     <div class="col-4">          
                         <div class="blog-card">  
-                            <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="https://sybiltec.com/images/shopify-logo-window-with-plant.jpg" 
+                            <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
                                 alt="Shopify logo window with plant"></a>  
                             <div class="blog-card-text">               
                                 <h3>6 Reasons Why You Should be Using Shopify</h3>
@@ -212,7 +212,7 @@ permalink: /
                     <div class="col-4">   
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">
-                                <img src="https://sybiltec.com/images/Laptop-notepad-pen-and-iphone-on-table-1200x630.jpg" 
+                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
                                 alt="Laptop notepad pen and iPhone on table"></a>
                             <div class="blog-card-text">                    
                                 <h3>WebTip Wednesday Series Launched on Twitter</h3>
