Add my photo to homepage

--- a/index.html
+++ b/index.html
@@ -81,10 +81,17 @@ permalink: /
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h4>Taking your online business further...</h4>
-                <h1>Sybiltec</h1>
-                <p class="padding-bottom">A freelance web designer and developer who can help you achieve your goals.</p>
-                <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
+                <div class="row">
+                    <div class="col-8">
+                        <h4>Taking your online business further...</h4>
+                        <h1>Sybiltec</h1>
+                        <p class="padding-bottom">A freelance web designer and developer who can help you achieve your goals.</p>
+                        <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
+                    </div>
+                    <div class="col-4">
+                        <img src="images/Sybil-Mayard.jpg">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="services section">
