--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ permalink: /
                         <h4>Taking your online business further...</h4>
                         <h1>Sybiltec</h1>
                         <p class="padding-bottom">A freelance web designer and developer who can help you achieve your goals.</p>
-                        <a class="btn-primary" href="https://sybiltec.com/services">View My Services</a>
+                        <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
                     </div>
                     <div class="col-4">
                         <img src="images/Sybil-Mayard.jpg">
@@ -149,31 +149,31 @@ permalink: /
                     <div class="col-6">                    
                         <div class="slideshow-container-portfolio">
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg">
+                                <img src="images/clients/Happily-Clappily-Ever-Laughter-2.jpg" alt="Happily Clappily Ever Laughter">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Emrys-Consulting-2.jpg">
+                                <img src="images/clients/Emrys-Consulting-2.jpg" alt="Emrys Consulting">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/NeroWireArt-2.jpg">
+                                <img src="images/clients/NeroWireArt-2.jpg" alt="NeroWireArt">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/LD-Tiling-Contractors-2.jpg">
+                                <img src="images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/CNT-Associates-2.jpg">
+                                <img src="images/clients/CNT-Associates-2.jpg" alt="CNT Associates">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Crazy-Thumbs-2.jpg">
+                                <img src="images/clients/Crazy-Thumbs-2.jpg" alt="Crazy Thumbs">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/The-Bamboo-Wardrobe-2.jpg">
+                                <img src="images/clients/The-Bamboo-Wardrobe-2.jpg" alt="The Bamboo Wardrobe">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Audrey-Zeitoun-Coaching-2.jpg">
+                                <img src="images/clients/Audrey-Zeitoun-Coaching-2.jpg" alt="Audrey Zeitoun Coaching">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/Future-Communities-UK-2.jpg">
+                                <img src="images/clients/Future-Communities-UK-2.jpg" alt="Future Communities">
                             </div>
                         </div>
                     </div>
@@ -200,8 +200,8 @@ permalink: /
                     <div class="col-6">
                         <i class="fa-regular fa-circle-check"></i><h3>A Range of Experiences</h3>
                         <p>I've developed a wide variety of skills through diverse work experiences, ranging from music production to managing a start-up.</p>
-                        <i class="fa-regular fa-circle-check"></i><h3>Worked With Over 20 Small Businesses</h3>
-                        <p>Over the last 3 years, I've helped several SMEs from within a wide range of industry sectors  to improve their online presence.</p>
+                        <i class="fa-regular fa-circle-check"></i><h3>Worked With Over 25 Small Businesses</h3>
+                        <p>Over the last 3 years, I've helped several SMEs from within a wide range of industry sectors to improve their online presence.</p>
                     </div>
                 </div>
             </div>
@@ -266,57 +266,64 @@ permalink: /
                 <div class="slideshow-container">
                     <!-- Full-width slides/quotes -->
                     <div class="mySlides fade">
-                    <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
-                    <div class="center">
-                        <img src="images/logos/nerowireart.png" alt="Nerowireart">
+                        <q>I would highly recommend Sybil; she listens and completely understands what I am asking for.<br>Her knowledge of Shopify is excellent and knows how to implement what I need.</q>
+                        <div class="center">
+                            <img src="images/logos/the-bamboo-wardrobe-logo.png" alt="The Bamboo Wardrobe">
+                        </div>
+                        <h4>Caroline Wardell</h4>
+                        <p class="center">Founder,<br>The Bamboo Wardrobe</p>
                     </div>
-                    <h4>Dr Zita Stone</h4>
-                    <p class="center">Founder,<br>Nerowireart</p>
-                </div>
                     <div class="mySlides fade">
-                    <q>Sybil is totally client-focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
-                    <div class="center">
-                        <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter">
+                        <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
+                        <div class="center">
+                            <img src="images/logos/nerowireart.png" alt="Nerowireart">
+                        </div>
+                        <h4>Dr Zita Stone</h4>
+                        <p class="center">Founder,<br>Nerowireart</p>
                     </div>
-                    <h4>Patricia Byrne</h4>
-                    <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
-                </div>
                     <div class="mySlides fade">
-                    <q>It was a pleasure to work with Sybil to create my Shopify website. She has excellent technical skills and she is very client-oriented: she always communicated so I had regular updates on what was achieved and estimated timelines to manage my expectations. She is always looking to improve and is a very hard worker. I would recommend her to anyone looking for a partner to nail their website!</q>
+                        <q>Sybil is totally client-focused. She morphs design and technical knowledge beautifully. She produces such high quality websites whilst being able to commit to deadlines. Sybil works so hard to bring clients bespoke websites! I am so happy with the support I received and over the moon with the way my website looks! I have been recommending Sybil to everyone and won't stop! She's amazing!</q>
+                        <div class="center">
+                            <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" alt="Happily Clappily Ever Laughter">
+                        </div>
+                        <h4>Patricia Byrne</h4>
+                        <p class="center">CEO,<br>Happily Clappily Ever Laughter</p>
+                    </div>
+                    <div class="mySlides fade">
+                        <q>It was a pleasure to work with Sybil to create my Shopify website. She has excellent technical skills and she is very client-oriented: she always communicated so I had regular updates on what was achieved and estimated timelines to manage my expectations. She is always looking to improve and is a very hard worker. I would recommend her to anyone looking for a partner to nail their website!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/KYOSK-Logo.png" alt="KYOSK">
                         </div>
                         <h4>Shaheen Javid</h4>
-                            <p class="center">CEO,<br>
-                                KYOSK</p>
+                            <p class="center">CEO,<br>KYOSK</p>
                     </div>
                     <div class="mySlides fade">
-                    <q>Sybil is a diligent professional, who is not only highly knowledgeable, but is also a delight to work with! She provided my organisation with a website audit and I was thrilled with the results! The audit was very clearly laid out so I knew exactly what to do to rectify issues, thanks to her plain English non-technical explanations. I would highly recommend Sybil's services to anyone!</q>
+                        <q>Sybil is a diligent professional, who is not only highly knowledgeable, but is also a delight to work with! She provided my organisation with a website audit and I was thrilled with the results! The audit was very clearly laid out so I knew exactly what to do to rectify issues, thanks to her plain English non-technical explanations. I would highly recommend Sybil's services to anyone!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Focus-on-Learning-logo.png" alt="Focus on Learning">
                         </div>
                         <h4>Freddie Ryder</h4>
                         <p class="center">CEO,<br>
                             Focus on Learning</p>
-                        </div>
+                    </div>
                     <div class="mySlides fade">
-                    <q>I have been working with Sybil for some time now on a range of digital service projects. I would recommend her, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon-free and understandable. She has delivered all the work she has taken on for us within the agreed timescale and within budget. Her work is of a high quality.</q>
+                        <q>I have been working with Sybil for some time now on a range of digital service projects. I would recommend her, she is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon-free and understandable. She has delivered all the work she has taken on for us within the agreed timescale and within budget. Her work is of a high quality.</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Future-Communities-UK-Logo.png" alt="Future Communities UK">
                         </div>
                         <h4>Gary Parker</h4>
                         <p class="center">Director,<br>
                             Future Communities UK</p>
-                        </div>
+                    </div>
                     <div class="mySlides fade">
-                    <q>Sybil is extremely thorough and professional, she pays great attention to details and she will adapt to your specific needs. She has helped me choose a platform for my domain name and website and is now helping me build the actual website for my business. I will definitely recommend Sybil to anyone wanting a high quality, personalised and reasonably priced service. Her work is top class!</q>
+                        <q>Sybil is extremely thorough and professional, she pays great attention to details and she will adapt to your specific needs. She has helped me choose a platform for my domain name and website and is now helping me build the actual website for my business. I will definitely recommend Sybil to anyone wanting a high quality, personalised and reasonably priced service. Her work is top class!</q>
                         <div class="center">
                             <img src="https://sybiltec.com/images/logos/Audrey-Zeitoun-Coaching-Logo.png" alt="Audrey Zeitoun Coaching">
                         </div>
                         <h4>Audrey Zeitoun</h4>
                         <p class="center">Life Transitions Coach,<br>
                             Audrey Zeitoun Coaching</p>
-                        </div>
+                    </div>
                     <!-- Next and previous buttons -->
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -328,6 +335,7 @@ permalink: /
                         <span class="dot" onclick="currentSlide(4)"></span>
                         <span class="dot" onclick="currentSlide(5)"></span>
                         <span class="dot" onclick="currentSlide(6)"></span>
+                        <span class="dot" onclick="currentSlide(7)"></span>
                     </div>
                 </div>
                 </div>
