--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@ permalink: /
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>London Website Design & Development | Sybiltec</title>       
-        <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
-            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
+        <title>Home | Kent & London Web Design and Development | Sybiltec</title>       
+        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="London Website Design & Development | Sybiltec" />
-        <meta property="og:description" content="Sybil Mayard provides web development services 
-            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
+        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact me for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -83,9 +81,9 @@ permalink: /
             <div class="container-1140">
                 <div class="row">
                     <div class="col-8">
-                        <h4>Taking your online business further...</h4>
-                        <h1>Sybiltec</h1>
-                        <p class="padding-bottom">A freelance web designer and developer who can help you achieve your goals.</p>
+                        <p>Taking your online business further...</p>
+                        <h2 style="color: #ffffff; font-size: 60px">Sybiltec</h2>
+                        <h1 class="padding-bottom" style="font-size: 18px;">A freelancer providing web design and development services to small businesses based in Kent and London.</h1>
                         <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
                     </div>
                     <div class="col-4">
@@ -96,7 +94,7 @@ permalink: /
         </div>
         <div class="services section">
             <div class="container-1140">
-                <h2 class="center">Services I Offer</h2>
+                <h2 class="center">Website Services</h2>
                 <hr>
                 <p class="center">Whether you're looking for help with setting up a website for the first time, or you have an existing site that you want to optimise, I offer a service that's right for you.</p>
                 <div class="row">
@@ -188,7 +186,7 @@ permalink: /
         </div>
         <div class="events section">
             <div class="container-1140">
-                <h2 class="center">Why Choose Me?</h2>
+                <h2 class="center">Why Choose Me as Your Web Designer?</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">
