Replace Design page with Events page

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@ permalink: /projects/
                                     <div class="topnav" id="myTopnav">
                                         <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/events">Events</a>
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -121,6 +121,8 @@ permalink: /projects/
                     <li><a href="https://sybiltec.com/uploads/Global_Entrepreneur_Challenge_2018.pdf" target="_blank" rel="noopener noreferrer">Global Entrepreneur Challenge 2018</a></li>
                     <li><a href="https://sybiltec.com/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
                 </ul>
+
+                <div class="padding-top"><a class="btn-primary" href="https://vidcareer.github.io" target="_blank" rel="noopener noreferrer">Visit VidCareer Website</a></div>
 
                 <h2 class="padding-top">An Android App for an Educational Poker Platform</h2>
                 <hr class="left-align">
