--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -74,7 +74,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                                     <div class="topnav" id="myTopnav">
                                         <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/events">Events</a>
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
