--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ permalink: /
                                     <div class="topnav" id="myTopnav">
                                         <a href="https://sybiltec.com/services">Services</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/events">Events</a>
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -204,57 +204,6 @@ permalink: /
                 </div>
             </div>
         </div>
-        <div class="blog section">
-            <div class="container-1140 padding-top">
-                <div class="center">
-                    <h2>Blog</h2>
-                    <hr>
-                    <p>Read my latest blog posts.</p>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-350x183.jpg" 
-                                alt="Person holding black iPhone 5"></a>     
-                            <div class="blog-card-text">           
-                                <h3>Cyber Security Best Practices for You and Your Business</h3>
-                                <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div> 
-                    </div>
-                    <div class="col-4">          
-                        <div class="blog-card">  
-                            <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
-                                alt="Shopify logo window with plant"></a>  
-                            <div class="blog-card-text">               
-                                <h3>7 Reasons Why You Should be Using Shopify</h3>
-                                <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">   
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">
-                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
-                                alt="Laptop notepad pen and iPhone on table"></a>
-                            <div class="blog-card-text">                    
-                                <h3>WebTip Wednesday Series Launched on Twitter</h3>
-                                <p>"WebTip Wednesday" is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltec on <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">Twitter</a>.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="testimonials section grey">
             <div class="container-1000">
                 <p class="center"><i class="fa-regular fa-comments"></i></p>
@@ -338,6 +287,57 @@ permalink: /
                 </div>
                 </div>
             </div>
+        <div class="blog section">
+            <div class="container-1140 padding-top">
+                <div class="center">
+                    <h2>Blog</h2>
+                    <hr>
+                    <p>Read my latest blog posts.</p>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-350x183.jpg" 
+                                alt="Person holding black iPhone 5"></a>     
+                            <div class="blog-card-text">           
+                                <h3>Cyber Security Best Practices for You and Your Business</h3>
+                                <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col-4">          
+                        <div class="blog-card">  
+                            <a href="https://sybiltec.com/6-reasons-to-use-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
+                                alt="Shopify logo window with plant"></a>  
+                            <div class="blog-card-text">               
+                                <h3>7 Reasons Why You Should be Using Shopify</h3>
+                                <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">   
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">
+                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
+                                alt="Laptop notepad pen and iPhone on table"></a>
+                            <div class="blog-card-text">                    
+                                <h3>WebTip Wednesday Series Launched on Twitter</h3>
+                                <p>"WebTip Wednesday" is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltec on <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">Twitter</a>.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         <div class="certifications section">
             <div class="container-1140">
