Remove old events

--- a/events.html
+++ b/events.html
@@ -86,7 +86,7 @@ permalink: /events/
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Webinar: Building an Online Store Using Shopify</h2>
+                <!-- <h2>Webinar: Building an Online Store Using Shopify</h2>
                 <hr class="left-align">      
                 <p><strong>Date and time:</strong> Tue, 4 Apr 2023 Time: 14:00 - 15:30 BST</p>
                 <p><strong>Location:</strong> Online</p>
@@ -115,7 +115,7 @@ permalink: /events/
                 <p>Gary Parker, Managing Director of CNT Associates, a London-based business support/fundraising consultancy, with over 20 years' experience of business support.</p>
                 <p>Sybil Mayard, founder of Sybiltec, helping small businesses to improve their online presence through better web design.</p>
 
-                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/building-an-online-store-using-shopify-free-webinar-tickets-566376205477" target="_blank" rel="noopener noreferrer">Register Here</a></div>
+                <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/building-an-online-store-using-shopify-free-webinar-tickets-566376205477" target="_blank" rel="noopener noreferrer">Register Here</a></div> -->
 
                 <h2>Webinar: Regulators Are Watching Your Website: Creatively Manage Website Compliance</h2>
                 <hr class="left-align">      
