Add new blog post

--- a/index.html
+++ b/index.html
@@ -295,6 +295,20 @@ permalink: /
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">   
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">
+                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
+                                alt="Laptop notepad pen and iPhone on table"></a>
+                            <div class="blog-card-text">                    
+                                <h3>Are You Inadvertently Abusing Your Customers' Data?</h3>
+                                <p>If you don't have a clearly defined purpose for processing your customers' data, it's time to start thinking about your website's privacy notice.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Read Blog</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/cyber-security-best-practices-for-business"><img src="images/person-holding-black-iphone-5-350x183.jpg" 
@@ -321,21 +335,10 @@ permalink: /
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">   
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">
-                                <img src="images/Laptop-notepad-pen-and-iphone-on-table-350x183.jpg" 
-                                alt="Laptop notepad pen and iPhone on table"></a>
-                            <div class="blog-card-text">                    
-                                <h3>WebTip Wednesday Series Launched on Twitter</h3>
-                                <p>"WebTip Wednesday" is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltec on <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">Twitter</a>.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/webtip-wednesday-series-launched-on-twitter">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+            </div>
+            <div class="center padding-bottom padding-top">
+                <a class="btn-primary" href="https://sybiltec.com/blog">Read All Articles</a>   
             </div>
         </div>
         </div>
