Update blog posts

--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -97,6 +97,7 @@ permalink: /5-best-tools-for-remote-working/
         </div>
         <div class="main section">
             <div class="container-1140">
+                <p><strong>Date published: 21 April 2020</strong></p>
                 <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free.</p>
 
                 <p>Of course, I can't go into all the details of what these fantastic apps can offer, but I hope this will give you an overview to help you choose the right applications for your business.</p>
